# n8n-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-TW.md  docker-compose.yml  main.py  n8n_official_nodes_reference.xlsx  pyproject.toml
backend/: pyproject.toml
backend/app/: config.py  main.py  request_context.py
backend/app/agent/: __init__.py  __main__.py  assembler.py  builder.py  completeness.py  deployer.py  graph.py  llm.py  planner.py  retriever_protocol.py  validator.py  validator_node.py
backend/app/agent/prompts/: __init__.py  fix.md  (+3 more)
backend/app/api/: __init__.py  routes.py
backend/app/chat/: __init__.py  dispatcher.py  keywords.py  keywords.yaml  session_store.py  tools.py
backend/app/models/: __init__.py  agent_state.py  api.py  catalog.py  enums.py  planning.py  validation.py  workflow.py
backend/app/n8n/: __init__.py  client.py  errors.py  types.py
backend/app/rag/: __init__.py  embedder.py  ingest_detailed.py  ingest_discovery.py  retriever.py  store.py  vector_store.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_contract.py  test_n8n_live.py  test_rag_live.py
backend/tests/unit/: conftest.py  test_agent_state.py  test_api_models.py  test_assembler.py  test_builder_cand_timeout.py  test_chat_dispatcher.py  test_chat_e2e.py  test_chat_keywords.py  test_chat_security.py  test_chat_session_store.py  test_chat_tools.py  test_completeness.py  test_embedder_profile.py  test_graph_wiring.py  test_health_check_openai.py  test_llm_timeout.py  test_models_import.py  test_n8n_client_unit.py  test_planner_core_controls.py  test_retriever.py  test_routes_chat.py  test_routes_confirm_plan.py  test_routes_plan.py  test_run_cli_unchanged.py  test_settings.py  test_validator.py
(+78 files in other folders)
